--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "dependencies": {
         "@project-serum/anchor": "^0.19.0",
         "@solana/spl-token": "^0.1.8",
-        "@solana/web3.js": "^1.29.1"  
+        "@solana/web3.js": "^1.29.1",
+        "buffer-layout": "^1.2.0"
     },
     "devDependencies": {
         "chai": "^4.3.4",
